# artwork-menda-plasma5

./: CMakeLists.txt  README.md
Menda/: CMakeLists.txt
lookandfeel/: metadata.desktop
lookandfeel/contents/: defaults
